--- a/README
+++ b/README
@@ -1,3 +1,4 @@
-IRIS - Incredible Rock Injuring System ;)
+IRIS - Incredible Rock Injuring System.
+Software for my diploma thesis.
 
-That’s the project I’m working on for my diploma thesis.
+All source code is in the public domain, unless otherwise noted.
